--- a/app/src/declaration/view/sections/icd-10.html
+++ b/app/src/declaration/view/sections/icd-10.html
@@ -6,7 +6,7 @@
     </md-card-title>
     <md-card-content>
         <md-autocomplete flex 
-            md-selected-item="case.diagnosis" 
+            md-selected-item="case.mainDiagnosis" 
             md-search-text="diagnosisSearch"
             md-items="diagnosis in propertyFilter(propertyValues['diagnosis'],diagnosisSearch)" 
             md-item-text="diagnosis" 
