--- a/app/src/header/view/header.html
+++ b/app/src/header/view/header.html
@@ -1,6 +1,6 @@
 <md-toolbar class="md-tall">
 
-    <od-settings></od-settings>
+    <!-- <od-settings></od-settings> -->
 
     <od-user></od-user>
 
