--- a/app/src/odUser/user.scss
+++ b/app/src/odUser/user.scss
@@ -16,7 +16,7 @@
     font-weight: 400;
     line-height: $u * 3;
     margin: 0;
-    padding-right: $u;
+    // padding-right: $u;
   }
 
   .od-user-admin {
