--- a/app/src/odSettings/view/settings.html
+++ b/app/src/odSettings/view/settings.html
@@ -1,16 +1,8 @@
 <section class="od-settings" ng-controller="SettingsController as vm">
 
     <div ng-controller="AuthController as ac">
-        
-        <!--<button
-            ng-if="ac.getUserInfo().user.capabilities.isAdmin"
-            class="od-btn od-settings--toggle" 
-            title="Indstillinger"
-            ui-sref="administration.systemsettings">
-            <i class="material-icons">settings</i>
-        </button>-->
         <md-button 
-            ng-if="ac.getUserInfo().user.capabilities.isAdmin" 
+            ng-if="ac.getUserRoles().indexOf('SiteManager') > -1 || ac.getUserRoles().indexOf('SiteRoleManager') > -1 || ac.getUserRoles().indexOf('SitePropertyValueManager') > -1" 
             class="od-btn md-icon-button od-settings--toggle" 
             title="Indstillinger" 
             ui-sref="administration.systemsettings">
