added checks for invalid forms

--- a/app/src/declaration/view/info-cards.html
+++ b/app/src/declaration/view/info-cards.html
@@ -1,3 +1,4 @@
+    <form name="$root.declarationForm">
 <div layout="row" layout-wrap>
     <div layout="column" flex-gt-sm="25" flex-sm="50" flex="100">
         <ng-include src="'app/src/declaration/view/sections/basic-info.html'"></ng-include>
@@ -16,5 +17,6 @@
     <div layout="column" flex-gt-sm="25" flex-sm="50" flex="100">
         <ng-include src="'app/src/declaration/view/sections/doctor-board.html'"></ng-include>
         <ng-include src="'app/src/declaration/view/sections/history.html'"></ng-include>
-    </di>
+    </div>
 </div>
+</form>
