--- a/app/src/declaration/view/patient-info-toolbar.html
+++ b/app/src/declaration/view/patient-info-toolbar.html
@@ -23,11 +23,11 @@
 </span>
 
 <span ng-if="editMode">
-    <md-button class="md-text-icon-button" aria-label="lås sagen" ng-click="lockCaseDialog()">
+    <md-button class="md-text-icon-button" aria-label="lås sagen" ng-click="lockCaseDialog()" ng-disabled="$root.declarationForm.$invalid">
         <md-icon>lock</md-icon> {{'DECLARATION.SAVE_AND_LOCK' | translate}}
     </md-button>
 
-    <md-button class="md-text-icon-button" aria-label="edit" ng-click="toggleEdit(); saveEdit()">
+    <md-button class="md-text-icon-button" aria-label="edit" ng-click="toggleEdit(); saveEdit()" ng-disabled="$root.declarationForm.$invalid">
         <md-icon>save</md-icon> {{'COMMON.SAVE' | translate}}
     </md-button>
 </span>
