--- a/app/src/declaration/view/sections/history.html
+++ b/app/src/declaration/view/sections/history.html
@@ -20,7 +20,7 @@
         <div layout="row">
             <md-input-container flex>
                 <label>Sagen oprettet</label>
-                <md-datepicker ng-model="case.creationDate" ng-disabled="!editPatientData"></md-datepicker>
+                <md-datepicker ng-model="case.creationDate" ng-disabled="!editPatientData" required></md-datepicker>
             </md-input-container>
         </div>
         <div layout="row">
