--- a/app/src/declaration/view/create-toolbar.html
+++ b/app/src/declaration/view/create-toolbar.html
@@ -4,7 +4,7 @@
     <span>{{'DECLARATION.NEW_DECLARATION' | translate}}</span>
 </md-button>
 
-<md-button ng-click="submit()" ng-if="'declaration.create' | isState">
+<md-button ng-click="submit()" ng-if="'declaration.create' | isState" ng-disabled="$root.declarationForm.$invalid">
     <md-icon>save</md-icon>
     <span>{{'COMMON.SAVE' | translate}}</span>
 </md-button>
