--- a/app/src/declaration/view/lock-dialog.html
+++ b/app/src/declaration/view/lock-dialog.html
@@ -12,7 +12,7 @@
         </md-toolbar>
 
         <md-dialog-content class="md-padding">
-            <md-radio-group ng-model="closeCaseParams.closed">
+            <md-radio-group ng-model="closeCaseParams.closed" required>
                 <md-radio-button value="closed"> {{'DECLARATION.CLOSED' | translate}}</md-radio-button>
                 <md-radio-button value="no-declaration">  {{'DECLARATION.CLOSED_WITHOUT_DECLARATION' | translate}}</md-radio-button>
             </md-radio-group>
