initial work on unlocking entries

--- a/app/src/declaration/view/lock-dialog.html
+++ b/app/src/declaration/view/lock-dialog.html
@@ -13,7 +13,7 @@
 
         <md-dialog-content class="md-padding">
             <md-radio-group ng-model="closeCaseParams.closed" required>
-                <md-radio-button value="closed"> {{'DECLARATION.CLOSED' | translate}}</md-radio-button>
+                <md-radio-button value="closed"> {{'DECLARATION.LOCK' | translate}}</md-radio-button>
                 <md-radio-button value="no-declaration">  {{'DECLARATION.CLOSED_WITHOUT_DECLARATION' | translate}}</md-radio-button>
             </md-radio-group>
 
