--- a/app/src/declaration/view/patient-info-toolbar.html
+++ b/app/src/declaration/view/patient-info-toolbar.html
@@ -3,7 +3,9 @@
 <md-tooltip>Sagen redigeres i øjeblikket af {{editor.displayName}}</md-tooltip>
 </span>
 
-<span ng-if="currentCase.hasOwnProperty('closed') || currentCase.hasOwnProperty('closedWithoutDeclaration')">
+closed: {{currentCase.closed}} without: {{currentCase.closedWithoutDeclaration}}
+
+<span ng-if="(currentCase.hasOwnProperty('closed') && currentCase.closed) || (currentCase.hasOwnProperty('closedWithoutDeclaration') && currentCase.closedWithoutDeclaration)">
     <md-icon>done</md-icon> {{'DECLARATION.DECLARATION_CLOSED' | translate}}
 
     <md-button ng-if="canReopenEntries()" class="md-text-icon-button" aria-label="genåben erklæringen" ng-click="unlockEntry()">
@@ -11,7 +13,7 @@
     </md-button>
 </span>
 
-<span ng-if="!currentCase.hasOwnProperty('closed') && !currentCase.hasOwnProperty('closedWithoutDeclaration')">
+<span ng-if="(!currentCase.hasOwnProperty('closed') || !currentCase.closed) && (!currentCase.hasOwnProperty('closedWithoutDeclaration') || !currentCase.closedWithoutDeclaration )">
 
 <span ng-if="!editMode">
     <md-button class="md-text-icon-button" aria-label="lås sagen" ng-click="lockCaseDialog()" ng-disabled="!canCurrentlyEdit">
