--- a/app/src/declaration/view/patient-info-toolbar.html
+++ b/app/src/declaration/view/patient-info-toolbar.html
@@ -3,12 +3,10 @@
 <md-tooltip>Sagen redigeres i øjeblikket af {{editor.displayName}}</md-tooltip>
 </span>
 
-closed: {{currentCase.closed}} without: {{currentCase.closedWithoutDeclaration}}
-
 <span ng-if="(currentCase.hasOwnProperty('closed') && currentCase.closed) || (currentCase.hasOwnProperty('closedWithoutDeclaration') && currentCase.closedWithoutDeclaration)">
     <md-icon>done</md-icon> {{'DECLARATION.DECLARATION_CLOSED' | translate}}
 
-    <md-button ng-if="canReopenEntries()" class="md-text-icon-button" aria-label="genåben erklæringen" ng-click="unlockEntry()">
+    <md-button ng-if="canReopenEntries" class="md-text-icon-button" aria-label="genåben erklæringen" ng-click="unlockEntry()">
         <md-icon>lock_open</md-icon> {{'DECLARATION.REOPEN' | translate}}
     </md-button>
 </span>
