--- a/app/src/declaration/view/sections/judgement.html
+++ b/app/src/declaration/view/sections/judgement.html
@@ -21,7 +21,7 @@
                 <span md-highlight-text="finalVerdictSearch" md-highlight-flags="gi">{{finalVerdict}}</span>
             </md-item-template>
         </md-autocomplete>
-        <md-tooltip md-direction="top" md-delay="500" ng-if="case.sanctionProposal != null">{{case.sanctionProposal}}</md-tooltip>
+        <md-tooltip md-direction="top" md-delay="500" ng-if="case.finalVerdict != null">{{case.finalVerdict}}</md-tooltip>
         </div>
                 <md-input-container class="md-block">
                     <label>Dom</label>
