Fixed userRoles and authorization for system settings.

--- a/app/src/odSettings/view/settings.html
+++ b/app/src/odSettings/view/settings.html
@@ -2,7 +2,7 @@
 
     <div ng-controller="AuthController as ac">
         <md-button 
-            ng-if="ac.getUserRoles().indexOf('SiteManager') > -1 || ac.getUserRoles().indexOf('SiteRoleManager') > -1 || ac.getUserRoles().indexOf('SitePropertyValueManager') > -1" 
+            ng-if="ac.userRoles.indexOf('SiteManager') > -1 || ac.userRoles.indexOf('SiteRoleManager') > -1 || ac.userRoles.indexOf('SitePropertyValueManager') > -1"
             class="od-btn md-icon-button od-settings--toggle" 
             title="Indstillinger" 
             ui-sref="administration.systemsettings">
