--- a/app/src/odUser/view/user.html
+++ b/app/src/odUser/view/user.html
@@ -10,7 +10,7 @@
              </button>-->
 
             <!-- <md-button 
-                ng-if="ac.getUserRoles().indexOf('SiteManager') > -1 || ac.getUserRoles().indexOf('SiteRoleManager') > -1 || ac.getUserRoles().indexOf('SitePropertyValueManager') > -1" 
+                ng-if="ac.userRoles.indexOf('SiteManager') > -1 || ac.userRoles.indexOf('SiteRoleManager') > -1 || ac.userRoles.indexOf('SitePropertyValueManager') > -1"
                 class="od-btn md-icon-button od-settings--toggle" 
                 title="Indstillinger" 
                 ui-sref="administration.systemsettings">
@@ -18,7 +18,7 @@
             </md-button> -->
 
             <md-button 
-                ng-if="ac.getUserRoles().indexOf('SiteManager') > -1 || ac.getUserRoles().indexOf('SiteRoleManager') > -1 || ac.getUserRoles().indexOf('SitePropertyValueManager') > -1" 
+                ng-if="ac.userRoles.indexOf('SiteManager') > -1 || ac.userRoles.indexOf('SiteRoleManager') > -1 || ac.userRoles.indexOf('SitePropertyValueManager') > -1"
                 class="md-icon-button od-btn "
                 title="Indstillinger" 
                 ui-sref="administration.systemsettings">
