--- a/app/src/declaration/view/sections/basic-info.html
+++ b/app/src/declaration/view/sections/basic-info.html
@@ -11,7 +11,7 @@
         </md-input-container>-->
         <md-input-container class="md-block">
             <label>CPR</label>
-            <input ng-model="case.cprNumber" maxlength="10" ng-disabled="!editPatientData" required>
+            <input ng-model="case.cprNumber" maxlength="10" minlength="10" ng-disabled="!editPatientData" required>
         </md-input-container>
         <md-input-container class="md-block">
             <label>Fornavne</label>
