--- a/app/src/declaration/view/waitinglist.html
+++ b/app/src/declaration/view/waitinglist.html
@@ -1,4 +1,10 @@
   <md-card>
+    <md-card-title>
+            <span flex></span>
+            <div layout="row" layout-align="center center">
+              <div>Antal: <span class="md-body-2">{{waitingListCases.length}}</span></div>
+            </div>
+    </md-card-title>
     <md-card-content>
     <md-table-container>
             <table md-table>
