--- a/app/src/declaration/view/sections/declaration.html
+++ b/app/src/declaration/view/sections/declaration.html
@@ -1,7 +1,7 @@
 <md-card>
     <md-card-title>
         <md-card-title-text>
-            <span class="md-headline">Anbefalet erklæring</span>
+            <span class="md-headline">Konklusion</span>
         </md-card-title-text>
     </md-card-title>
     <md-card-content>
@@ -37,7 +37,46 @@
         </div>
 
         <p class="md-subhead">Afgivet af<br></p>
-        <md-input-container class="md-block">
+        <md-autocomplete flex 
+            md-selected-item="case.doctor" 
+            md-search-text="doctorSearch"
+            md-items="doctor in propertyFilter(propertyValues['doctor'],doctorSearch)" 
+            md-item-text="doctor" 
+            md-min-length="0" 
+            md-floating-label="Læge"
+            ng-disabled="!editPatientData">
+            <md-item-template>
+                <span md-highlight-text="doctorSearch" md-highlight-flags="gi">{{doctor}}</span>
+            </md-item-template>
+        </md-autocomplete>
+
+        <md-autocomplete flex 
+            md-selected-item="case.psychologist" 
+            md-search-text="psychSearch"
+            md-items="psychologist in propertyFilter(propertyValues['psychologist'],psychSearch)" 
+            md-item-text="psychologist" 
+            md-min-length="0" 
+            md-floating-label="Psykolog"
+            ng-disabled="!editPatientData">
+            <md-item-template>
+                <span md-highlight-text="psychSearch" md-highlight-flags="gi">{{psychologist}}</span>
+            </md-item-template>
+        </md-autocomplete>
+
+        <md-autocomplete flex 
+            md-selected-item="case.socialworker" 
+            md-search-text="socialworkerSearch"
+            md-items="socialworker in propertyFilter(propertyValues['socialworker'],socialworkerSearch)" 
+            md-item-text="socialworker" 
+            md-min-length="0" 
+            md-floating-label="Socialrådgiver"
+            ng-disabled="!editPatientData">
+            <md-item-template>
+                <span md-highlight-text="socialworkerSearch" md-highlight-flags="gi">{{socialworker}}</span>
+            </md-item-template>
+        </md-autocomplete>
+
+        <!-- <md-input-container class="md-block">
             <label>Læge</label>
             <input ng-model="case.doctor" ng-disabled="!editPatientData">
         </md-input-container>
@@ -45,5 +84,9 @@
             <label>Psykolog</label>
             <input ng-model="case.psychologist" ng-disabled="!editPatientData">
         </md-input-container>
+        <md-input-container class="md-block">
+            <label>Socialrådgiver</label>
+            <input ng-model="case.socialworker" ng-disabled="!editPatientData">
+        </md-input-container> -->
     </md-card-content>
 </md-card>
