--- a/app/src/declaration/view/search-advanced.html
+++ b/app/src/declaration/view/search-advanced.html
@@ -75,7 +75,7 @@
 
             <div flex-offset="10">
                 <md-checkbox ng-model="searchParams.psychEval">
-                    Psykologisk undersøgelse foretaget
+                    Psykologisk evaluering foretaget
                 </md-checkbox>
             </div>
         </div>
@@ -167,7 +167,7 @@
                         <th md-column md-numeric md-order-by="cprNumber">CPR</th>
                         <th md-column md-order-by="doctor">Læge</th>
                         <th md-column md-order-by="closed">Erklæring afgivet</th>
-                        <th md-column md-order-by="psychologist">Psykologisk undersøgelse</th>
+                        <th md-column md-order-by="psychologist">Psykologisk evaluering</th>
                         <th md-column md-order-by="mainCharge" ng-if="searchParams.mainCharge">Hovedsigtelse</th>
                         <th md-column md-order-by="placement" ng-if="searchParams.placement">Placering</th>
                         <th md-column md-order-by="sanctionProposal" ng-if="searchParams.sanctionProposal">Sanktionsforslag</th>
