--- a/app/src/declaration/view/sections/declaration.html
+++ b/app/src/declaration/view/sections/declaration.html
@@ -76,17 +76,18 @@
             </md-item-template>
         </md-autocomplete>
 
-        <!-- <md-input-container class="md-block">
-            <label>Læge</label>
-            <input ng-model="case.doctor" ng-disabled="!editPatientData">
-        </md-input-container>
-        <md-input-container class="md-block">
-            <label>Psykolog</label>
-            <input ng-model="case.psychologist" ng-disabled="!editPatientData">
-        </md-input-container>
-        <md-input-container class="md-block">
-            <label>Socialrådgiver</label>
-            <input ng-model="case.socialworker" ng-disabled="!editPatientData">
-        </md-input-container> -->
+        <md-autocomplete flex 
+            md-selected-item="case.secretary" 
+            md-search-text="secretarySearch"
+            md-items="secretary in propertyFilter(propertyValues['secretary'],secretarySearch)" 
+            md-item-text="secretary" 
+            md-min-length="0" 
+            md-floating-label="Sekretær"
+            ng-disabled="!editPatientData">
+            <md-item-template>
+                <span md-highlight-text="secretarySearch" md-highlight-flags="gi">{{secretary}}</span>
+            </md-item-template>
+        </md-autocomplete>
+
     </md-card-content>
 </md-card>
