can no longer submit random data in dropdowns, added x to fast delete entry in dropdown

--- a/app/src/declaration/view/sections/basic-info.html
+++ b/app/src/declaration/view/sections/basic-info.html
@@ -43,7 +43,9 @@
             md-item-text="ethnicity" 
             md-min-length="0" 
             md-floating-label="Etnicitet"
-            ng-disabled="!editPatientData">
+            ng-disabled="!editPatientData"
+            md-clear-button="true"
+            md-require-match="true">
             <md-item-template>
                 <span md-highlight-text="ethnicitySearch" md-highlight-flags="gi">{{ethnicity}}</span>
             </md-item-template>
@@ -56,7 +58,9 @@
             md-item-text="ethnicity" 
             md-min-length="0" 
             md-floating-label="Mors etnicitet"
-            ng-disabled="!editPatientData">
+            ng-disabled="!editPatientData"
+            md-clear-button="true"
+            md-require-match="true">
             <md-item-template>
                 <span md-highlight-text="motherEthnicitySearch" md-highlight-flags="gi">{{ethnicity}}</span>
             </md-item-template>
@@ -69,7 +73,9 @@
             md-item-text="ethnicity" 
             md-min-length="0" 
             md-floating-label="Fars etnicitet"
-            ng-disabled="!editPatientData">
+            ng-disabled="!editPatientData"
+            md-clear-button="true"
+            md-require-match="true">
             <md-item-template>
                 <span md-highlight-text="fatherEthnicitySearch" md-highlight-flags="gi">{{ethnicity}}</span>
             </md-item-template>
