--- a/app/src/declaration/view/sections/declaration.html
+++ b/app/src/declaration/view/sections/declaration.html
@@ -13,7 +13,9 @@
             md-item-text="placement" 
             md-min-length="0" 
             md-floating-label="Placering"
-            ng-disabled="!editPatientData">
+            ng-disabled="!editPatientData"
+            md-clear-button="true"
+            md-require-match="true">
             <md-item-template>
                 <span md-highlight-text="placementSearch" md-highlight-flags="gi">{{placement}}</span>
             </md-item-template>
@@ -28,7 +30,9 @@
             md-item-text="sanctionProposal" 
             md-min-length="0" 
             md-floating-label="Sanktionsforslag"
-            ng-disabled="!editPatientData">
+            ng-disabled="!editPatientData"
+            md-clear-button="true"
+            md-require-match="true">
             <md-item-template>
                 <span md-highlight-text="sanctionProposalSearch" md-highlight-flags="gi">{{sanctionProposal}}</span>
             </md-item-template>
@@ -44,7 +48,9 @@
             md-item-text="doctor" 
             md-min-length="0" 
             md-floating-label="Læge"
-            ng-disabled="!editPatientData">
+            ng-disabled="!editPatientData"
+            md-clear-button="true"
+            md-require-match="true">
             <md-item-template>
                 <span md-highlight-text="doctorSearch" md-highlight-flags="gi">{{doctor}}</span>
             </md-item-template>
@@ -57,7 +63,9 @@
             md-item-text="psychologist" 
             md-min-length="0" 
             md-floating-label="Psykolog"
-            ng-disabled="!editPatientData">
+            ng-disabled="!editPatientData"
+            md-clear-button="true"
+            md-require-match="true">
             <md-item-template>
                 <span md-highlight-text="psychSearch" md-highlight-flags="gi">{{psychologist}}</span>
             </md-item-template>
@@ -70,7 +78,9 @@
             md-item-text="socialworker" 
             md-min-length="0" 
             md-floating-label="Socialrådgiver"
-            ng-disabled="!editPatientData">
+            ng-disabled="!editPatientData"
+            md-clear-button="true"
+            md-require-match="true">
             <md-item-template>
                 <span md-highlight-text="socialworkerSearch" md-highlight-flags="gi">{{socialworker}}</span>
             </md-item-template>
@@ -83,7 +93,9 @@
             md-item-text="secretary" 
             md-min-length="0" 
             md-floating-label="Sekretær"
-            ng-disabled="!editPatientData">
+            ng-disabled="!editPatientData"
+            md-clear-button="true"
+            md-require-match="true">
             <md-item-template>
                 <span md-highlight-text="secretarySearch" md-highlight-flags="gi">{{secretary}}</span>
             </md-item-template>
