--- a/app/src/declaration/view/sections/judgement.html
+++ b/app/src/declaration/view/sections/judgement.html
@@ -16,7 +16,9 @@
             md-item-text="finalVerdict" 
             md-min-length="0" 
             md-floating-label="Endelig dom"
-            ng-disabled="!editPatientData">
+            ng-disabled="!editPatientData"
+            md-clear-button="true"
+            md-require-match="true">
             <md-item-template>
                 <span md-highlight-text="finalVerdictSearch" md-highlight-flags="gi">{{finalVerdict}}</span>
             </md-item-template>
