--- a/app/src/sites/sites.scss
+++ b/app/src/sites/sites.scss
@@ -415,3 +415,7 @@ md-card-title h3 {
   margin-top: 34px;
   width: 96px;
 }
+
+md-autocomplete[md-floating-label] .md-show-clear-button button {
+  top: 0;
+}
